# easy-input-to-spreadsheets

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  display.py  pyproject.toml  requirements.txt  spreadsheet_agent.py  spreadsheet_manager.py  tools.py  voice_input.py
.github/workflows/: publish.yml  test.yml
data/: .gitkeep
docs/: BEST_PRACTICES_GUIDE.md
exports/: .gitkeep
src/easy_input_to_spreadsheets/: __init__.py  agent.py  cli.py  tools.py  voice_input.py
