[project]
name = "easy-input-to-spreadsheets"
version = "0.1.0"
description = "Voice/text-based natural language interface for managing spreadsheets, powered by the Claude Agent SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Lucas", email = "lucas@example.com" }
]
keywords = [
    "spreadsheet",
    "claude",
    "ai",
    "voice",
    "natural-language",
    "agent",
    "sdk",
    "anthropic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/EnkrateiaLucca/easy-input-to-spreadsheets"
Documentation = "https://github.com/EnkrateiaLucca/easy-input-to-spreadsheets#readme"
Repository = "https://github.com/EnkrateiaLucca/easy-input-to-spreadsheets"
Issues = "https://github.com/EnkrateiaLucca/easy-input-to-spreadsheets/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["spreadsheet_agent.py", "spreadsheet_manager.py", "tools.py", "voice_input.py", "display.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["easy_input_to_spreadsheets"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
